--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,4 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           log-level: verbose
           dangerous-clean-slate: true
-          dry-run: true
+          dry-run: false
