--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           node-version: '16'
 
+      - name: Install Dependencies
+        run: npm install
+
       - name: Cache dependencies
         uses: actions/cache@v2
         with:
